# Zygisk-Loader

./: README.md  module.gradle  update.json
module/: build.gradle
module/rust/: Cargo.toml
module/rust/src/: api.rs  lib.rs
zygiskloader/magisk_module/: customize.sh
