[package]
name = "zygiskloader"
version = "0.2.0"
edition = "2021"
authors = ["HanSoBored <raihanzxx@gmailcom>"]
description = "Zygisk-Loader Zygisk module with ReZygisk API v5 support"

[dependencies]
bitflags = "1.3.2"
jni = "0.19.0"
log = "0.4.14"
libc = "0.2"

[lib]
name = "zygiskloader"
crate-type = ["dylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
